--- a/css/styles.css
+++ b/css/styles.css
@@ -356,8 +356,8 @@ a {
 }
 .logo {
   margin-right: 93px;
-  margin-top: 24px;
-  margin-bottom: 25px;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .logo-finish {
