--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ footer {
 .button {
   cursor: pointer;
   padding: 6px 22px;
+  border-radius: 4px;
 }
 .button:not(:last-child) {
   margin-right: 8px;
@@ -183,7 +184,7 @@ a {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.page-header {
+.section-header {
   padding-bottom: 32px;
   padding-top: 32px;
 }
@@ -205,6 +206,7 @@ a {
   line-height: 1.4;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  max-width: 650px;
 }
 
 .hero button {
@@ -216,12 +218,14 @@ a {
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
+  border-radius: 4px;
 }
 .hero button:hover {
-  color: #188ce8;
+  background-color: #f5f4fa;
+  color: var(--primary-text-color);
 }
 
-.section h3 {
+.section-advantages h3 {
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
@@ -304,7 +308,7 @@ a {
   margin-bottom: 4px;
 }
 
-.card p {
+.team-name {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -332,7 +336,7 @@ a {
 
 /* ------header------ */
 
-.page-header {
+.section-header {
   display: flex;
   height: 80px;
   align-items: center;
@@ -371,7 +375,7 @@ a {
 .auth-items:not(:last-child) {
   margin-right: 50px;
 }
-.conteiner-hero {
+.hero {
   text-align: center;
 
   background-color: var(--primary-text-color);
@@ -420,6 +424,7 @@ a {
 
 .team-content {
   padding: 30px;
+  text-align: center;
 }
 
 .team-items {
